--- a/Style.css
+++ b/Style.css
@@ -1,1 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@700&display=swap');
+body {
+    background: url("img/original.gif") no-repeat;
+    background-size: 100%;
+}
 
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    font-family: 'Anonymous Pro', monospace;
+}
+
+.section {
+    padding: 2.5rem;
+    margin: 2rem;
+}
+
+.sec2>div {
+    display: inline-block;
+    padding: 1.5rem;
+}
