--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@700&display=swap');
 body {
     background: url("img/original.gif") no-repeat;
-    background-size: 100%;
+    background-size: cover;
 }
 
 .container {
